# python-backend-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py
